--- a/2019/12/2019-12-07.md
+++ b/2019/12/2019-12-07.md
@@ -1,1 +1,6 @@
-# hello diary
+# hello tech diary
+
+inspired by @joyeecheung
+
+joyeecheung: https://www.cnblogs.com/joyeecheung/p/4555802.html
+gh-pages: https://www.cnblogs.com/MuYunyun/p/6082359.html
