--- a/2019/12/2019-12-07.md
+++ b/2019/12/2019-12-07.md
@@ -1,6 +1,9 @@
 # hello tech diary
 
-inspired by @joyeecheung
+知乎上发现了[joyeecheung]((https://github.com/joyeecheung/)
 
-joyeecheung: https://www.cnblogs.com/joyeecheung/p/4555802.html
-gh-pages: https://www.cnblogs.com/MuYunyun/p/6082359.html
+一路摸到她的github然后发现了这个小东西[My Tech Diary](http://joyeecheung.github.io/diary/)
+
+很喜欢于是整合到了自己的博客里头
+
+从技术博客到技术日记 https://www.cnblogs.com/joyeecheung/p/4555802.html
