--- a/2019/12/2019-12-08.md
+++ b/2019/12/2019-12-08.md
@@ -1,5 +1,2 @@
-# GitHut
 
-[link](https://githut.info/)
-
-A SMALL PLACE TO DISCOVER LANGUAGES IN GITHUB
+[GitHut](https://githut.info/) A SMALL PLACE TO DISCOVER LANGUAGES IN GITHUB
